[package]
name = "zk-blend"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
num-bigint = "0.4"
num-traits = "0.2"
rug = { version = "1.27", default-features = false, features = ["integer"] } # Explicitly disable default features
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.2"

[[bench]]
name = "benchmarks"
harness = false